refactor: Clean up JavaScript handling code